# powderORM

./: .gitignore  Cargo.toml  PACKAGING.md  README.md
.github/workflows/: ci.yml  release.yml
bindings/c/: README.md
bindings/c/include/: powder.h
bindings/c/test/: test_powder.c
bindings/cpp/: README.md
bindings/cpp/include/: powder.hpp
bindings/cpp/test/: test_powder.cpp
bindings/csharp/: README.md
bindings/csharp/Powder/: Client.cs  Native.cs  Orm.cs  Powder.csproj
bindings/csharp/Powder.Tests/: Program.cs
bindings/go/: README.md  go.mod  loader_unix.go  loader_windows.go  orm.go  orm_test.go  powder_test.go
bindings/kotlin/: README.md
bindings/kotlin/src/dev/powder/: Powder.kt
bindings/kotlin/test/: KotlinTest.kt
crates/ncode-core/: Cargo.toml
crates/ncode-core/examples/: profile.rs
crates/ncode-core/src/: client.rs  codec.rs  schema.rs
crates/ncode-core/tests/: order_by.rs  roundtrip.rs
crates/ncode-node/: Cargo.toml  package.json
crates/ncode-node/src/: lib.rs
crates/ncode-node/ts/: reader.ts
crates/ncode-python/: Cargo.toml
crates/ncode-python/python/ncode/: _reader.py  query.py
crates/ncode-python/src/: lib.rs
crates/ncode-python/tests/: test_e2e.py
crates/powder-cli/: Cargo.toml
crates/powder-cli/src/: cli.rs  codegen.rs  config.rs  db.rs  dialect.rs  lib.rs  schema.rs  setup.rs  tools.rs
crates/powder-cli/tests/: pg_migrate.rs
crates/powder-core/: Cargo.toml
crates/powder-core/src/: array.rs  client.rs  codec.rs  error.rs  inspect.rs  lib.rs  ms.rs  orm.rs  pg.rs
crates/powder-ffi/: Cargo.toml
crates/powder-ffi/src/: lib.rs
crates/powder-java/: Cargo.toml  README.md
crates/powder-java/java/: PowderTest.java
crates/powder-java/java/com/powder/: Client.java  Json.java  Orm.java  PowderNative.java
crates/powder-java/src/: lib.rs
crates/powder-node/ts/: orm.test.ts  orm.ts
crates/powder-python/: Cargo.toml
crates/powder-python/src/: lib.rs
crates/powder-studio/: Cargo.toml
crates/powder-studio/src/: ai.rs  lib.rs  studio.html  studio.rs
docs-site/: README.md
docs-site/app/: layout.tsx  page.tsx
docs-site/app/[lang]/: layout.tsx
docs-site/app/[lang]/(home)/: page.tsx
docs-site/app/[lang]/docs/: layout.tsx
docs-site/app/api/search/: route.ts
docs-site/components/: benchmark.tsx  commit-feed.tsx  discord-mark.tsx  mdx.tsx  provider.tsx  sidebar-footer.tsx  site-footer.tsx  support-form.tsx  visitor-stats.tsx
docs-site/content/docs/: cli.en.mdx  cli.ja.mdx  cli.mdx  cli.zh.mdx  index.en.mdx  index.ja.mdx  index.mdx  index.zh.mdx  meta.en.json  meta.ja.json  meta.json  meta.zh.json  performance.en.mdx  performance.ja.mdx  performance.mdx  performance.zh.mdx  quickstart.en.mdx  quickstart.ja.mdx  quickstart.mdx  quickstart.zh.mdx  schema.en.mdx  schema.ja.mdx  schema.mdx  schema.zh.mdx
docs-site/content/docs/bindings/: c.en.mdx  c.ja.mdx  c.mdx  c.zh.mdx  cpp.en.mdx  cpp.ja.mdx  cpp.mdx  cpp.zh.mdx  csharp.en.mdx  csharp.ja.mdx  csharp.mdx  csharp.zh.mdx  go.en.mdx  go.ja.mdx  go.mdx  go.zh.mdx  index.en.mdx  index.ja.mdx  index.mdx  index.zh.mdx  java.en.mdx  java.ja.mdx  java.mdx  java.zh.mdx  kotlin.en.mdx  kotlin.ja.mdx  kotlin.mdx  kotlin.zh.mdx  meta.en.json  meta.ja.json  meta.json  meta.zh.json  python.en.mdx  python.ja.mdx  python.mdx  python.zh.mdx  rust.en.mdx  rust.ja.mdx  rust.mdx  rust.zh.mdx  (+4 more)
docs-site/content/docs/databases/: cockroachdb.en.mdx  cockroachdb.ja.mdx  cockroachdb.mdx  cockroachdb.zh.mdx  index.en.mdx  index.ja.mdx  index.mdx  index.zh.mdx  libsql.en.mdx  libsql.ja.mdx  libsql.mdx  libsql.zh.mdx  meta.en.json  meta.ja.json  meta.json  meta.zh.json  mysql.en.mdx  mysql.ja.mdx  mysql.mdx  mysql.zh.mdx  postgres.en.mdx  postgres.ja.mdx  postgres.mdx  postgres.zh.mdx  sqlite.en.mdx  sqlite.ja.mdx  sqlite.mdx  sqlite.zh.mdx  sqlserver.en.mdx  sqlserver.ja.mdx  sqlserver.mdx  sqlserver.zh.mdx
docs-site/content/docs/orm/: aggregations.en.mdx  aggregations.ja.mdx  aggregations.mdx  aggregations.zh.mdx  extend.en.mdx  extend.ja.mdx  extend.mdx  extend.zh.mdx  finder.en.mdx  finder.ja.mdx  finder.mdx  finder.zh.mdx  index.en.mdx  index.ja.mdx  index.mdx  index.zh.mdx  meta.en.json  queries-transactions.en.mdx  queries-transactions.ja.mdx  queries-transactions.mdx  queries-transactions.zh.mdx  relations.en.mdx  relations.ja.mdx  relations.mdx  relations.zh.mdx
docs-site/content/docs/tutorial/: 01-first-steps.mdx  02-schema-relations.mdx  03-queries.mdx  04-practice.mdx  meta.json
docs-site/lib/: i18n-ui.ts  i18n.ts  layout.shared.tsx  source.ts
docs-site/scripts/macmini/: README.md  com.powder.visitor-counter.plist  commit-feed-append.py  commit-feed-backfill.py  docs-site-watch.sh  visitor-counter-server.py
jvm/: gradle.properties  settings.gradle.kts
jvm/powder-java/: build.gradle.kts
jvm/powder-kotlin/: build.gradle.kts
scripts/: sync-docs.sh  watch-sync-docs.ps1
src/: .gitignore  Cargo.toml  README.md
src/bench-site/: drizzle-schema.js  package-lock.json  package.json  server.js
src/bench-site/prisma/: schema.prisma
src/bench-site/public/: index.html
src/crates/ncode-core/src/: array.rs  batch.rs  client.rs  error.rs  lib.rs  query.rs
src/crates/ncode-node/: index.d.ts  index.js  package-lock.json  tsconfig.json
src/crates/ncode-node/ts/: e2e.test.ts  index.ts  query.ts  reader.ts
src/crates/ncode-python/: pyproject.toml
src/crates/ncode-python/python/ncode/: __init__.py
src/docs/: FORMAT.md
src/docs/index.bleve/store/: root.bolt
verification/: README.md
