[workspace]
resolver = "2"
members = [
    "crates/powder-core",
    "crates/powder-node",
    "crates/powder-python",
    "crates/powder-java",
    "crates/powder-ffi",
    "crates/powder-cli",
    "bench-site/bench/rust-bench",
]

# The language-binding crates build C dynamic libraries and need their own
# toolchains (napi-cli / maturin). Keep the core in the default build set and
# let the bindings opt in explicitly so `cargo build` from the root stays fast.
default-members = ["crates/powder-core", "crates/powder-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Powder team"]
repository = "https://github.com/OSS-Ncode/powderORM"

[workspace.dependencies]
powder-core = { path = "crates/powder-core" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
