[workspace]
resolver = "2"
members = [
    "crates/powder-core",
    "crates/powder-node",
    "crates/powder-python",
    "crates/powder-java",
    "crates/powder-ffi",
    "crates/powder-cli",
    "crates/powder-studio",
]
# NOTE: bench-site/ is .gitignored, so its rust-bench crate must NOT be a
# workspace member — CI has no bench-site checkout and cargo would fail to load
# the manifest. Run the benchmark crate standalone from bench-site/ instead
# (its Cargo.toml uses plain literal values, not `.workspace = true`
# inheritance, since an excluded crate can't inherit from this workspace).
# The exclude itself is required too — without it, cargo auto-detects the
# nested directory as a nonmember package and refuses to build it at all
# ("current package believes it's in a workspace when it's not").
exclude = ["bench-site/bench/rust-bench"]

# The language-binding crates build C dynamic libraries and need their own
# toolchains (napi-cli / maturin). Keep the core in the default build set and
# let the bindings opt in explicitly so `cargo build` from the root stays fast.
default-members = ["crates/powder-core", "crates/powder-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Powder team"]
repository = "https://github.com/OSS-Ncode/powder-orm"

[workspace.dependencies]
powder-core = { package = "powder-orm", path = "crates/powder-core", version = "0.1.0" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
# Debug symbols would otherwise ship inside every distributed cdylib/wheel/
# addon (SQLite is compiled in — the symbol payload is large).
strip = "symbols"
