[package]
name = "ncode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Zero-copy columnar database engine core (Ncode)"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
