[package]
name = "ncode-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js (napi-rs) bindings for the Ncode engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
ncode-core.workspace = true
napi = { version = "2", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
