[package]
name = "ncode-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python (PyO3) bindings for the Ncode engine"

[lib]
name = "_ncode"
crate-type = ["cdylib"]

[dependencies]
ncode-core.workspace = true
pyo3 = { version = "0.29", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
