[package]
name = "powder-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Zero-copy columnar database engine core (Powder)"

[features]
default = []
# PostgreSQL runtime backend: `Client::connect("postgres://...")`.
postgres = ["dep:postgres"]
# MySQL/MariaDB runtime backend: `Client::connect("mysql://...")`.
mysql = ["dep:mysql"]

[dependencies]
thiserror.workspace = true
tokio.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
# ORM op/schema JSON. `preserve_order` keeps object key order, so where /
# orderBy fragments render in the caller's declaration order — the same
# semantics as the TS and Python ORMs (JS objects / Python dicts are ordered).
serde_json = { version = "1", features = ["preserve_order"] }
# Persistent worker pool for the parallel table scan — avoids per-query
# thread spawn/teardown.
rayon = "1"
postgres = { version = "0.19", optional = true }
mysql = { version = "25", optional = true, default-features = false, features = ["minimal"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Used by the profiling harness so measurements match the bindings' allocator.
mimalloc = "0.1"
