[package]
name = "powder-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "C ABI for the Powder engine — the substrate for the Go binding and any C-compatible host"

[lib]
name = "powder_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
powder-core = { workspace = true, features = ["postgres", "mysql", "mssql", "libsql"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
# The columnar build path is allocation-heavy; the platform default heap
# (especially on Windows) measurably slows cold queries. Same as powder-node.
mimalloc = "0.1"
