[package]
name = "powder-java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Java (JNI) bindings for the Powder engine"

[lib]
name = "powder_java"
crate-type = ["cdylib"]

[dependencies]
powder-core = { workspace = true, features = ["postgres", "mysql", "mssql", "libsql"] }
jni = "0.21"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
# The columnar build path is allocation-heavy; the platform default heap
# (especially on Windows) measurably slows cold queries. Same as powder-node.
mimalloc = "0.1"
