[package]
name = "powder-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python (PyO3) bindings for the Powder engine"

[lib]
name = "_powder"
crate-type = ["cdylib"]

[dependencies]
powder-core = { workspace = true, features = ["postgres", "mysql", "mssql", "libsql"] }
# abi3-py39: build a single stable-ABI wheel that works on CPython 3.9+, so
# releases ship one wheel per platform instead of one per Python version.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
# The columnar build path is allocation-heavy; the platform default heap
# (especially on Windows) measurably slows cold queries. Same as powder-node.
mimalloc = "0.1"
