[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ncode"
version = "0.1.0"
description = "Async, zero-copy columnar database client (Rust core)"
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "../../README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# The Rust extension is `ncode._ncode`; the pure-Python wrapper lives alongside.
module-name = "ncode._ncode"
python-source = "python"
features = ["pyo3/extension-module"]
